--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"laravel/framework" : ">=5.5",
 		"laravel/tinker" : "~1.0",
 		"mervick/curl-helper" : "^2.2",
-		"hanoivip/payment-contract": "dev-master"
+		"hanoivip/payment-contract": "dev-main"
 	},
 	"autoload" : {
 		"psr-4" : {
